# claude-session-manager

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  build-release.ps1  build-release.sh  package-lock.json  package.json  remote-code-server.spec  remote-code.spec  remote_code_bootstrap.py  remote_code_launcher.py  remote_code_server.py  setup.ps1  setup.sh  start-dev.ps1  start-dev.sh  start.ps1  start.sh  tunnel-guide.md  tunnel-quick.ps1  tunnel-quick.sh  tunnel.ps1  tunnel.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
backend/: auth.py  config.py  database.py  git_utils.py  language_registry.py  language_server.py  main.py  project_layouts.py  pty_manager.py  requirements.txt  runtime_paths.py  session_manager.py  websocket.py
crates/wmux-app/: Cargo.toml  tauri.conf.json
crates/wmux-app/capabilities/: default.json
crates/wmux-app/frontend/: claude-editor.js  command-palette.js  context-menu.js  index.html  layout.js  main.js  mcp-manager.js  mobile-ui.js  project-sidebar.js  prompt-library.js  settings.js  style.css  terminal-manager.js  transport.js
crates/wmux-app/frontend-mobile/: index.html  main.js  style.css  terminal.js  ws-client.js
crates/wmux-app/src/: db.rs  lib.rs  main.rs  remote.rs  tls.rs
crates/wmux-cli/: Cargo.toml
crates/wmux-cli/src/: app.rs  event_loop.rs  input.rs  lib.rs  main.rs
crates/wmux-cli/src/model/: mod.rs  workspace.rs
crates/wmux-cli/src/socket/: commands.rs  mod.rs  server.rs
crates/wmux-cli/src/terminal/: mod.rs
crates/wmux-cli/src/tui/: mod.rs  render.rs  status.rs  surface_view.rs  tabs.rs
crates/wmux-cli/tests/: commands_test.rs  input_test.rs  protocol_test.rs  shell_test.rs  split_tree_test.rs
crates/wmux-core/: Cargo.toml
crates/wmux-core/src/: core.rs  lib.rs
crates/wmux-core/tests/: commands_test.rs  protocol_test.rs  shell_test.rs  split_tree_test.rs
desktop/: backend.cjs  generate-update-manifest.cjs  main.cjs  preload.cjs  state.cjs  window-manager.cjs
docs/: README.md  ToDo.md  architecture.md  backend-api.md  configuration.md  database-schema.md  deployment.md  design.md  file-explorer.md  frontend-components.md  git-integration.md  index.html  verification-checklist.md  websocket-protocol.md
docs/superpowers/plans/: 2026-03-19-wmux-mvp.md  2026-03-23-core-extraction.md  2026-03-23-next-level-ui-upgrade.md  2026-03-23-tauri-scaffold.md  2026-03-23-tauri-sp2-splits-tabs.md  2026-03-23-website.md  2026-04-01-mcp-server.md
docs/superpowers/specs/: 2026-03-23-core-extraction-design.md  2026-03-23-next-level-ui-upgrade-design.md  2026-03-23-tauri-app-design.md  2026-03-23-tauri-sp2-splits-tabs-design.md  2026-03-23-website-design.md  2026-04-01-mcp-server-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  main.tsx  runtime.ts
frontend/src/components/: AddSessionModal.tsx  Dialog.tsx  ErrorBoundary.tsx  FileExplorer.tsx  FolderBrowser.tsx  GitPanel.tsx  IdeWorkbench.tsx  LayoutDropSurface.tsx  Login.tsx  MobileKeyBar.tsx  NewSession.tsx  PaneLayout.tsx  PanelSessionView.tsx  PersistentTerminal.tsx  SessionList.tsx  SessionStatePane.tsx  Terminal.tsx  TerminalMountSlot.tsx  VoiceInputButton.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: api.ts  project.ts  session.ts
frontend/src/utils/: api.ts  cliTones.ts  clipboard.ts  fileIcons.tsx  genericLspClient.ts  gitGraph.ts  layout.test.ts  layout.ts  layoutDropGeometry.test.ts  layoutDropGeometry.ts  (+9 more)
scripts/: init-certs.sh  new-device.sh  start-playwright-server.ps1
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/html/: index.html
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi
src-tauri/src/: backend_manager.rs  lib.rs  main.rs  menu.rs  state_manager.rs  tray.rs  window_manager.rs
src-tauri/src/commands/: app.rs  mod.rs  runtime.rs  updater.rs  window.rs
tests/: test_project_layout_persistence.py  test_project_layouts.py  test_runtime_env.py  test_runtime_paths.py
(+8 files in other folders)
