[package]
name = "wmux"
version = "0.1.0"
edition = "2021"
description = "Windows terminal multiplexer with split panes, tabbed workspaces, and a JSON-RPC socket API for AI agent control"
license = "MIT"
repository = "https://github.com/fernandomenuk/wmux"
keywords = ["terminal", "multiplexer", "windows", "tui", "tmux"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
portable-pty = "0.8"
vt100 = "0.15"
clap = { version = "4", features = ["derive"] }
