[package]
name = "wmux-app"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "wmux"
path = "src/main.rs"

[dependencies]
wmux-core = { path = "../wmux-core" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
