[package]
name = "wmux-app"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "wmux"
path = "src/main.rs"

[dependencies]
wmux-core = { path = "../wmux-core" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rand = "0.8"
futures-util = "0.3"
vt100 = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
