[package]
name = "wmux-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wmux"
path = "src/main.rs"

[lib]
name = "wmux"
path = "src/lib.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
portable-pty = "0.8"
vt100 = "0.15"
clap = { version = "4", features = ["derive"] }
