[package]
name = "wmux-cli"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "wmux-cli"
path = "src/main.rs"

[lib]
name = "wmux"
path = "src/lib.rs"

[dependencies]
wmux-core = { path = "../wmux-core" }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
vt100 = "0.15"
clap = { version = "4", features = ["derive"] }
